--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <div class="card shadow-custom rounded-custom border-dark mt-5 bg-primary-light">
                         <div class="card-body py-2 px-4 d-flex justify-content-between">
                             <div>
-                                <h3 class="m-0 fw-bold ">Ujun Junaedii</h3>
+                                <h3 class="m-0 fw-bold ">Ujun Junaedi</h3>
                                 <small class="text-muted">I'am developer web application</small>
                             </div>
                             <div class="pt-2">
@@ -60,6 +60,34 @@
             <div id="second-section"></div>
             <!-- Second Section -->
             <div class="row mt-height justify-content-md-center">
+                <div class="col-lg-11 offset-lg-1 col-md-12" data-aos="fade-up" data-aos-duration="700"
+                    data-aos-delay="200">
+                    <div class="card shadow-custom rounded-custom border-dark">
+                        <div class="card-body p-5">
+                            <h4 class="fw-bold">Tentang Saya</h4>
+                            <p class="my-4">
+                                Seorang <strong>Mahasiswa</strong> dan <strong>Freelancer</strong> sebagai
+                                <strong>Website Development</strong>, <br>
+                                membangun aplikasi serta bergerak dibidang komputer digital khusus nya <br>
+                                software aplikasi yang dapat membantu pemecahan masalah yang ada. <br>
+                                Saya telah berpengalaman beberapa tahun dalam <br>
+                                membagun aplikasi berbasis web.
+                            </p>
+                            <p>
+                                <strong>“Belajar dari error program dan atasi masalahnya”</strong><br>
+                                “--Hidup Perlu Berusaha--”
+                            </p>
+
+                            <div class="right-bottom-image">
+                                <img src="assets/image/icons/info_bg.svg">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Second Section -->
+            <div class="row mt-height justify-content-md-center">
                 <div class="col-lg-5 offset-lg-1 col-md-6" data-aos="fade-up" data-aos-duration="700"
                     data-aos-delay="200">
                     <div class="card-person-second">
@@ -71,16 +99,21 @@
                 </div>
                 <div class="col-lg-6 mt-md-5-custom" data-aos="fade-up" data-aos-duration="700">
                     <div class="">
-                        <h4 class="fw-bold">My experience in app <br>development</h4>
+                        <h4 class="fw-bold">Pengalaman saya dalam <br> pengembangan aplikasi </h4>
                     </div>
                     <div class="mt-5">
-                        <h5 class="fw-bold">Senior web app developer</h5>
-                        <p class="text-muted">Has 4 years experience in <br>web application development</p>
+                        <h5 class="fw-bold">Mahir pengembangan aplikasi berbasis web</h5>
+                        <p class="text-muted">
+                            Memiliki 4 tahun pengalaman dalam <br>
+                            pengembangan aplikasi web
+                        </p>
                     </div>
                     <div class="mt-5">
-                        <h5 class="fw-bold">Creative user developer web application</h5>
-                        <p class="text-muted">Field work at the software house company Prilude Studio <br>in the
-                            application design section and working with the team</p>
+                        <h5 class="fw-bold">Aplikasi web pengembang pengguna kreatif</h5>
+                        <p class="text-muted">
+                            Kerja lapangan di perusahaan software house Prilude Studio <br>di
+                            bagian desain aplikasi dan bekerja dengan tim
+                        </p>
                     </div>
                 </div>
             </div>
@@ -88,7 +121,7 @@
             <div class="row mt-height">
                 <div class="col-lg-5 offset-lg-1" data-aos="fade-up" data-aos-duration="700">
                     <div class="">
-                        <h4 class="fw-bold">Basic language skills</h4>
+                        <h4 class="fw-bold">Keterampilan bahasa dasar</h4>
                     </div>
                     <div class="mt-5">
                         <h6 class="small">
@@ -142,7 +175,7 @@
                 <div class="col-lg-6" data-aos="fade-up" data-aos-duration="700">
                     <div class="card shadow-custom rounded-custom border-dark">
                         <div class="card-body">
-                            <h2 class="fw-bold">Framework used to build web applications</h2>
+                            <h2 class="fw-bold">Kerangka kerja yang digunakan untuk membangun aplikasi web</h2>
                         </div>
                     </div>
                 </div>
@@ -180,7 +213,7 @@
                 <div class="col-lg-11 offset-lg-1 text-center" data-aos="fade-up" data-aos-duration="700">
                     <div class="card rounded-custom shadow-custom border-dark d-inline-block">
                         <div class="card-body px-5">
-                            <h2 class="fw-bold">Projects ever made</h2>
+                            <h2 class="fw-bold">Proyek yang pernah dibuat</h2>
                         </div>
                     </div>
                 </div>
@@ -198,11 +231,11 @@
                                 <div class="card-body">
                                     <h5 class="fw-bold" style="margin-top: 3rem !important;">SSO</h5>
                                     <p>
-                                        <small>Has been used by the company PT HKMU Metals</small>
+                                        <small>Telah digunakan oleh perusahaan PT HKMU Metals</small>
                                     </p>
-                                    <p class="text-muted">The application manages user data including user roles and
-                                        also registers, resets
-                                        passwords and forgot passwords</p>
+                                    <p class="text-muted">Aplikasi mengelola data pengguna termasuk peran pengguna dan
+                                        juga mendaftar, mengatur ulang
+                                        kata sandi dan lupa kata sandi</p>
                                 </div>
                             </div>
                         </div>
@@ -216,10 +249,10 @@
                         <div class="card-body">
                             <h5 class="fw-bold" style="margin-top: 3rem !important;">ITCare</h5>
                             <p>
-                                <small>Has been used by the company PT HKMU Metals</small>
+                                <small>Telah digunakan oleh perusahaan PT HKMU Metals</small>
                             </p>
-                            <p class="text-muted">An application that manages submitting trouble tickets to it support
-                                and resolving reported problems</p>
+                            <p class="text-muted">Aplikasi yang mengelola pengiriman tiket masalah untuk mendukungnya
+                                dan menyelesaikan masalah yang dilaporkan</p>
                         </div>
                     </div>
                 </div>
