--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             </p>
 
                             <div class="right-bottom-image">
-                                <img src="assets/image/icons/info_bg.svg">
+                                <img src="assets/image/element/element2.png">
                             </div>
                         </div>
                     </div>
