--- a/index.html
+++ b/index.html
@@ -52,13 +52,14 @@
             <div class="md:col-span-1 relative">
                 <div class="relative z-10">
                     <div class="absolute left-7 bottom-24 lg:left-10 lg:bottom-20 transform space-y-4 block z-10">
-                        <a href="#" class="text-gray-400 hover:text-accent-yellow block text-4xl"><i
+                        <a href="https://www.instagram.com/junn.juna_"
+                            class="text-gray-400 hover:text-accent-yellow block text-4xl"><i
                                 class="fab fa-instagram"></i></a>
-                        <a href="#" class="text-gray-400 hover:text-accent-yellow block text-4xl"><i
+                        <a href="https://www.linkedin.com/in/ujun-junaedi-b44b4a390"
+                            class="text-gray-400 hover:text-accent-yellow block text-4xl"><i
                                 class="fab fa-linkedin-in"></i></a>
-                        <a href="#" class="text-gray-400 hover:text-accent-yellow block text-4xl"><i
-                                class="fab fa-twitter"></i></a>
-                        <a href="#" class="text-gray-400 hover:text-accent-yellow block text-4xl"><i
+                        <a href="https://github.com/jujunjuna189"
+                            class="text-gray-400 hover:text-accent-yellow block text-4xl"><i
                                 class="fab fa-github"></i></a>
                     </div>
 
