--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     qualified Full Stack Developer. I love business and technology, and I am passionate about honing my
                     skills and growing my company.
                 </p>
-                <a href="#"
+                <a href="assets/pdf/Cv Inggris -Ujun Junaedi.pdf"
                     class="inline-block border border-accent-yellow text-accent-yellow px-6 py-2 text-sm font-medium hover:bg-accent-yellow hover:text-dark-primary transition duration-300">
                     Download CV
                 </a>
